# full_stack

./: .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
.reasonix/skills/: before-done.md
.reasonix/truncated-results/: 1780797625724-cf6fce6d-wait_for_job.txt
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  start.sh  status.sh  stop.sh
backend/secrets/: deepseek.toml.example
backend/src/: config.rs  crypto.rs  db.rs  lib.rs  logging.rs  main.rs  secrets.rs
backend/src/app_middleware/: auth.rs
backend/src/entity/: dashboard_schedules.rs  dashboard_snapshots.rs  dashboards.rs  datasources.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs
backend/src/handlers/: admin.rs  auth.rs  chat.rs  dashboards.rs  datasources.rs  health.rs  metrics.rs  mod.rs  snapshots.rs
backend/src/migration/: m20250602_000001_create_auth_tables.rs  m20250603_000002_create_dashboards.rs  m20250603_000003_create_snapshots.rs  m20250603_000004_create_datasources.rs  m20250603_000005_add_folder_support.rs  m20250603_000006_cron_schedule.rs  m20250605_000007_snapshot_html_in_db.rs  m20250605_000008_pg_comments.rs  mod.rs
backend/src/models/: api.rs  auth.rs  chat.rs  dashboard.rs  mod.rs  snapshot.rs
backend/src/services/: ai_chat.rs  auth.rs  dashboards.rs  datasources.rs  deepseek.rs  metric_schema.rs  metrics.rs  mod.rs  panel_hydrate.rs  roles.rs  snapshot_html.rs  snapshots.rs  users.rs
frontend/: .env.development  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  start.sh  stop.sh  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/__tests__/: resolveSql.test.ts
frontend/src/api/: admin.ts  auth.ts  chat.ts  client.ts  cmp.ts  dashboard.ts  datasource.ts  endpoints.ts  index.ts  snapshot.ts  types.ts
frontend/src/components/: AuthBootstrap.tsx  BackendGate.tsx  SessionExpiredRedirect.tsx  TableExpandArrow.tsx
scripts/: build.sh  deploy.sh  e2e-dashboard.sh  gen_metrics.py
(+54 files in other folders)
