[package]
name = "cmp-backend"
version = "0.1.0"
edition = "2021"
default-run = "cmp-backend"

[[bin]]
name = "cmp-backend"
path = "src/main.rs"

[[bin]]
name = "encrypt-secret"
path = "src/bin/encrypt-secret.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
futures-util = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.10"
cron = "0.16"
toml = "1"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
